# micmac

./: .gitignore  .hgignore  .travis.yml  14357_643_832_206.txt  AFAIRE-MPD.txt  AvantPropos.tex  BckUPCPF.txt.dcd  Books.txt.dcd  CDCC3DC.txt  CMakeLists.txt  CPF-OK.ptx  DACorrel.tex  DAEnergetik.tex  DAGeneralites.tex  DAMultiRes.tex  DUAutreSec.tex  DUBins.tex  DUGen.tex  DUMec.tex  DUMecaGen.tex  DbgTrackApero.txt  DocMicMac.tex  Dockerfile  Dockerfile_PSMNet  Dockerfile_mmcii_simlearn  Doxyfile.in  ERC.txt.dcd  Formats.tex  Image.cpp  Keypoint.cpp  LISEZMOI  LISEZMOI.md  MEC.xml  MICMAC.files  MICMAC.includes  Mail1.txt  Makefile  Makefile-XML2CPP  Match1.cpp.dcd  MkStdMM9185_248_408_638  (+67 more)
BenchElise/bench/: .b_0_57.cpp.swp  CMakeLists.txt  Makefile  OKb_0_46_1.cpp  TTapi_vecto.cpp  api_vecto.cpp  b_00_0.cpp  b_0_0.cpp  b_0_1.cpp  b_0_10.cpp  b_0_11.cpp  b_0_12.cpp  b_0_13.cpp  b_0_14.cpp  b_0_15.cpp  b_0_16.cpp  b_0_17.cpp  b_0_18.cpp  b_0_18_1.cpp  b_0_19.cpp  b_0_19_1.cpp  b_0_19_2.cpp  b_0_2.cpp  b_0_20.cpp  b_0_21.cpp  b_0_22.cpp  b_0_23.cpp  b_0_24.cpp  b_0_25.cpp  b_0_26.cpp  b_0_26_1.cpp  b_0_27.cpp  b_0_28.cpp  b_0_29.cpp  b_0_3.cpp  b_0_30.cpp  b_0_31.cpp  b_0_32.cpp  b_0_33.cpp  b_0_34.cpp  (+100 more)
BenchElise/bench_mm3d/: CMakeLists.txt  ChunkStream.cpp  ChunkStream.h  ChunkStream.inline.h  TracePack.cpp  TracePack.h  TracePack.inline.h  VersionedFileHeader.cpp  VersionedFileHeader.h  VersionedFileHeader.inline.h  bench_mm3d.cpp  versioned_test  versioned_test.cpp
CodeExterne/ANN/: CMakeLists.txt  Copyright.txt  License.txt  ReadMe.txt  VERSION.txt
CodeExterne/Poisson/: CMakeLists.txt  Sources.cmake  license.txt
CodeExterne/rnx2rtkp/: CMakeLists.txt  licence_rtklib.txt
MMVII/: .gitignore  CMK-NoCompile.sh  CMakeLists.txt  Doxyfile  NoCompile.sh  README.md  Readme.md  TODO.txt  git_help_mpd.txt  purge.sh  todo.txt  vcpkg.json
MMVII/Doc/: .gitignore  Doc2007.aux  Doc2007.idx  Doc2007.out  Doc2007.tex  Doc2007.toc  Doc2007_a4.tex  Doc2007_a5.tex  Makefile
MMVII/DocInternet/: Introduction à Makefile.html  std::shared_ptr - cppreference.com.html
MMVII/ExternalInclude/: MarketIO.h
MMVII/MMVII-LocalParameters/: Default-MMVII-CurentPofile.xml
MMVII/MMVII-RessourceDir/: CameraDataBase.xml  Model.json  Model.xml
MMVII/Txt/: Boost.txt  RoadMap.txt  Serialization.txt
MMVII/apib11/: .gitignore  CMakeLists.txt  Calib-PerspCentral-Foc-28000_Cam-PENTAX_K5.xml  Doxyfile  MMVII.py  Makefile  README.md  ex_cam.py  ex_camera_ori.py  ex_test.py  ex_tp_cam.py  makedoc.py  py_MMVII.cpp  py_MMVII.h  py_MMVII_Aime.cpp  py_MMVII_Geom.cpp  py_MMVII_Geom3D.cpp  py_MMVII_Image2D.cpp  py_MMVII_Images.cpp  py_MMVII_Mappings.cpp  py_MMVII_Matrix.cpp  py_MMVII_MeasuresIm.cpp  py_MMVII_PCSens.cpp  py_MMVII_Ptxd.cpp  py_MMVII_RelPose.cpp  py_MMVII_Sensor.cpp  py_MMVII_SysSurR.cpp  py_MMVII_TypeConv.h  py_MMVII_Which.cpp  py_MMVII_memory.cpp  pyproject.toml  setup.py  test.py
MMVII/apipy/: .gitignore  Licence_CeCILL-B_V1-en.txt  Makefile_apipy_linux  gen_backrefs.py  gen_fix_classes.py  gen_typemaps.py  mmv2.i  readme.md  setup.cfg  setup.py
MMVII/bash-completion/: README  make_completion.sh  mmvii-completion  mmvii-completion.py  mmvii-completion.template
MMVII/html/: BenchGlob_8cpp.html  BenchGlob_8cpp_source.html  BenchPtxD_8cpp_source.html  BenchSerial_8cpp.html  BenchSerial_8cpp_source.html  InstalMM_8cpp_source.html  MMVII__2Include__Serial__Tpl_8h_source.html  MMVII__AllClassDeclare_8h.html  MMVII__AllClassDeclare_8h_source.html  MMVII__Bench_8h.html  MMVII__Bench_8h_source.html  MMVII__Class4Bench_8h.html  MMVII__Class4Bench_8h_source.html  MMVII__Cste_8cpp_source.html  MMVII__DeclareAllCmd_8h.html  MMVII__DeclareAllCmd_8h_source.html  MMVII__DeclareCste_8h.html  MMVII__DeclareCste_8h_source.html  MMVII__Error_8h.html  MMVII__Error_8h_source.html  MMVII__MMV1Compat_8h.html  MMVII__MMV1Compat_8h_source.html  MMVII__Mappings_8h.html  MMVII__Mappings_8h_source.html  MMVII__Ptxd_8h.html  MMVII__Ptxd_8h_source.html  MMVII__Sensor_8h.html  MMVII__Sensor_8h_source.html  MMVII__Stringifier_8h.html  MMVII__Stringifier_8h_source.html  MMVII__Sys_8h.html  MMVII__Sys_8h_source.html  MMVII__all_8h.html  MMVII__all_8h_source.html  MMVII__enums_8h.html  MMVII__enums_8h_source.html  MMVII__memory_8h.html  MMVII__memory_8h_source.html  MMVII__nums_8h.html  MMVII__nums_8h_source.html  (+235 more)
MMVII/include/: FileLock.h  MMVII_2Include_CSV_Serial_Tpl.h  MMVII_2Include_Serial_Tpl.h  MMVII_2Include_Tiling.h  MMVII_AimeTieP.h  MMVII_AllClassDeclare.h  MMVII_Bench.h  MMVII_BlocRig.h  MMVII_BundleAdj.h  MMVII_Class4Bench.h  MMVII_Clino.h  MMVII_DeclareAllCmd.h  MMVII_DeclareCste.h  MMVII_Derivatives.h  MMVII_Error.h  MMVII_ExifData.h  MMVII_ExtractLines.h  MMVII_FormDer_BinaryOp.h  MMVII_FormDer_CGenTpl.h  MMVII_FormDer_UnaryOp.h  MMVII_FormalDerivatives.h  MMVII_GenArgsSpec.h  MMVII_Geom2D.h  MMVII_Geom3D.h  MMVII_GeomTpl.h  MMVII_GraphTriplets.h  MMVII_HeuristikOpt.h  MMVII_HierarchicalProc.h  MMVII_Image2D.h  MMVII_ImageInfoExtract.h  MMVII_ImageMorphoMath.h  MMVII_Images.h  MMVII_InstrumentalBlock.h  MMVII_Interpolators.h  MMVII_Linear2DFiltering.h  MMVII_MMV1Compat.h  MMVII_Manifolds.h  MMVII_Mappings.h  MMVII_Matrix.h  MMVII_MeasuresIm.h  (+51 more)
MMVII/kapture/: .gitignore  Makefile  kpt_common.cpp  kpt_common.h  kpt_features.h  kpt_imagerecords.h  kpt_internal.cpp  kpt_internal.h  kpt_mmv2.cpp  kpt_project.cpp  kpt_project.h  kpt_reconstruction.h  kpt_sensor.cpp  kpt_sensor.h  kpt_sensors.cpp  kpt_sensors.h  kpt_test.cpp
MMVII/latex/: BenchGlob_8cpp.tex  BenchSerial_8cpp.tex  MMVII__AllClassDeclare_8h.tex  MMVII__Bench_8h.tex  MMVII__Class4Bench_8h.tex  MMVII__DeclareAllCmd_8h.tex  (+168 more)
applis/: CMakeLists.txt  TestConflits.txt
saisie3D/: CMakeLists.txt  Cloud.cpp  Cloud.h  GLWidget.cpp  GLWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mmGuiParameters.cpp  mmGuiParameters.h  saisie3D.pro  util.h
src/: CMakeCache.txt  CMakeLists.txt  El0-10.ply  El0-11.ply  El0-13.ply  El0-16.ply  El0-21.ply  El1-10.ply  El1-11.ply  El1-13.ply  El1-16.ply  El1-21.ply  GpGpu.cmake  StdAfx.h  mm3d_.cpp
(+6867 files in other folders)
